--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
   background-size: cover;
   background-attachment: fixed;
   color: aliceblue;
-  opacity: 0.6;
+  opacity: 1;
 }
 
 .image {
   display: block;
   margin: 0 auto;
-  opacity: 0.6;
+  opacity: 1;
 }
 
 section {
@@ -25,19 +25,19 @@ section {
   display: flex;
   background-image: url("goal.jpg");
   background-attachment: fixed;
-  opacity: 0.6;
+  opacity: 1;
 }
 
 .pra {
   flex-basis: 30%;
-  opacity: 0.6;
+  opacity: 1;
 }
 
 .contact {
   display: flex;
   background-image: url("contact.jpeg");
   background-attachment: fixed;
-  opacity: 0.6;
+  opacity: 1;
 }
 
 .me {
@@ -46,5 +46,12 @@ section {
   align-items: center;
   animation: alternate;
   font-style: oblique;
-  opacity: 0.6;
+  opacity: 1;
+}
+
+/* Set opacity 0.4 only to background images */
+.attractive,
+.goals,
+.contact {
+  background-color: rgba(255, 255, 255, 0.4); /* Adjust the opacity value as needed */
 }
