--- a/style.css
+++ b/style.css
@@ -1,57 +1,46 @@
-.attractive {
-  background-image: url("back.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  color: aliceblue;
-  opacity: 1;
-}
+ .attractive{
+        background-image: url("back.jpg");
+        background-size: cover;
+        background-attachment: fixed;
+        color: aliceblue ;
+        opacity: 1;
 
-.image {
-  display: block;
-  margin: 0 auto;
-  opacity: 1;
-}
+      }
+      .image{
+        display:block;
+        margin: 0 auto;
+        opacity: 0.6;
+      }
+     section{
+      display:flex; 
+      justify-content: center;
+      align-items: center;
+      height:100vh;
+     }
+  
+     .goals{ /* it will only change img not text */
+      content:"";
+      display:flex; 
+      background-image: url("goal.jpg");
+      background-attachment: fixed;
+      
+    }
+    .pra{
+      flex-basis: 30%;
+      opacity:10;
 
-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.goals {
-  /* it will only change img not text */
-  content: "";
-  display: flex;
-  background-image: url("goal.jpg");
-  background-attachment: fixed;
-  opacity: 1;
-}
-
-.pra {
-  flex-basis: 30%;
-  opacity: 1;
-}
-
-.contact {
-  display: flex;
-  background-image: url("contact.jpeg");
-  background-attachment: fixed;
-  opacity: 1;
-}
-
-.me {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: alternate;
-  font-style: oblique;
-  opacity: 1;
-}
-
-/* Set opacity 0.4 only to background images */
-.attractive,
-.goals,
-.contact {
-  background-color: rgba(255, 255, 255, 0.4); /* Adjust the opacity value as needed */
-}
+    }
+    .contact{
+      display:flex; 
+      background-image: url("contact.jpeg");
+      background-attachment: fixed;
+    
+    }
+    .me{
+      display:flex; 
+      justify-content: center;
+      align-items: center;
+      animation: alternate;
+      font-style: oblique;
+      opacity:0.6;
+    }      
