--- a/style.css
+++ b/style.css
@@ -1,51 +1,46 @@
-.attractive {
-    background-image: rgba(0, 0, 0, 0.4); /* Adjust the opacity value as needed */
-    background-image: url("back.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    color: aliceblue;
-    opacity: 0.6; /* Adjust the opacity of the background image */
-}
+ .attractive{
+        background-image: url("back.jpg");
+        background-size: cover;
+        background-attachment: fixed;
+        color: aliceblue ;
+        opacity: 1;
 
-.image {
-    display: block;
-    margin: 0 auto;
-    opacity: 0.6;
-}
+      }
+      .image{
+        display:block;
+        margin: 0 auto;
+        opacity: 0.6;
+      }
+     section{
+      display:flex; 
+      justify-content: center;
+      align-items: center;
+      height:100vh;
+     }
+  
+     .goals{ /* it will only change img not text */
+      content:"";
+      display:flex; 
+      background-image: url("goal.jpg");
+      background-attachment: fixed;
+      
+    }
+    .pra{
+      flex-basis: 30%;
+      opacity:10;
 
-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-.goals::before { /* Use ::before pseudo-element to target the background image */
-    content: "";
-    display: flex;
-    background-image: rgba(0, 0, 0, 0.4); /* Adjust the opacity value as needed */
-    background-image: url("goal.jpg");
-    background-attachment: fixed;
-}
-
-.pra {
-    flex-basis: 30%;
-    opacity: 1; /* Keep opacity of text elements unchanged */
-}
-
-.contact::before { /* Use ::before pseudo-element to target the background image */
-    content: "";
-    display: flex;
-    background-image: rgba(0, 0, 0, 0.4); /* Adjust the opacity value as needed */
-    background-image: url("contact.jpeg");
-    background-attachment: fixed;
-}
-
-.me {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation: alternate;
-    font-style: oblique;
-    opacity: 0.6;
-}
+    }
+    .contact{
+      display:flex; 
+      background-image: url("contact.jpeg");
+      background-attachment: fixed;
+    
+    }
+    .me{
+      display:flex; 
+      justify-content: center;
+      align-items: center;
+      animation: alternate;
+      font-style: oblique;
+      opacity:0.6;
+    }      
